# squarespace_commerce

./: .gitignore  Cargo.toml  README.md
src/: client.rs  lib.rs  orders.rs  products.rs
src/types/: mod.rs  orders.rs  pagination.rs  products.rs  webhook.rs
test_responses/: orders.json  webhook_order.json
