[package]
name = "squarespace_commerce"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
url-builder = "0.1.1"

[dev-dependencies]
rstest = "0.23.0"
serde_json = "1.0.128"
