[package]
name = "squarespace_commerce"
version = "0.1.0"
edition = "2021"
description = "A package that permits interfacing with squarespace commerce APIs"
homepage = "https://github.com/christianheussy/squarespace_commerce"
repository = "https://github.com/christianheussy/squarespace_commerce"
license = "MIT OR Apache-2.0"
keywords = ["squarespace"]
categories = [
    "api-bindings",
    "asynchronous",
    "web-programming",
    "web-programming::http-client",
]

[lib]

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
url-builder = "0.1.1"

[dev-dependencies]
rstest = "0.23.0"
serde_json = "1.0.128"
